[package]
name = "ezr-photo-viewer"
version = "0.1.0"
authors = ["Cam Williams <cam@camwilliams.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.7.0"
gio = { version = "0.7.0", features = ["futures"] }
gdk-pixbuf = { version = "0.7.0", features = ["futures"] }
glib = { version = "0.8.2", features = ["futures"] }
futures = "0.3.1"
tokio = { version = "0.2.2", features = ["full"] }