[package]
name = "ezr-photo-viewer"
version = "0.1.0"
authors = ["Cam Williams <cam@camwilliams.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.7.0"
gio = "0.7.0"
gdk-pixbuf = "0.7.0"
glib = "0.8.2"
gdk = "0.11.0"
futures = "0.3.1"